# rp_2040_temp_sensor_with_st7735_screen

./: CMakeLists.txt  README.md  main.c
lib/Config/: DEV_Config.c
lib/GUI/: GUI_Paint.c
lib/LCD/: LCD_1in8.c  LCD_1in8.h
